--- a/resume2.html
+++ b/resume2.html
@@ -20,8 +20,9 @@
 </head>
 
 <body>
+    <img src="/girl.webp" alt="my photo">
 
-    <h1>Anjali V S T.J</h1>
+    <h1>Anjali V S </h1>
     <p>Email: abc@gmailcom | Phone: 9188000003 | place: velooppadam p.o</p>
     <hr>
 
@@ -67,13 +68,17 @@
     <div class="section">
         <h2>Personal Details</h2>
         <ul>
-            <li>Father's Name: Sajan V R T.O</li>
+            <li>Father's Name: Sajan V R </li>
             <li>Date of Birth: 3/01/2007</li>
             <li>Gender: Female</li>
             <li>Languages Known: English, Malayalam</li>
         </ul>
     </div>
-
+    <br>
+    <footer>
+        <p>contact us: 3906783510</p>
+        <p>Made By Anjali V S</p>
+    </footer>
 </body>
 </html>
 
